--- a/Pages/index.html
+++ b/Pages/index.html
@@ -20,6 +20,14 @@
         <li>chmod: Changes file permissions.</li>
         <li>exit: Closes the terminal window</li>
     </ul>
+    <h3> Workflow: Cloning, Editing, Committing, and Pushing</h3>
+    <ul>
+        <li>  Creating a Repository: Requires a GitHub account.</li>
+        <li>Cloning: Copies an existing repository to a local computer.</li>
+        <li>Committing: Saves changes to the local repository.</li>
+        <li>Pulling: Updates the local repository with changes from the remote repository.</li>
+        <li>Pushing: Uploads local changes to the remote repository</li>
+    </ul>
     
 </body>
 </html>
